force-app/main/default/objects/Accomadation__c/Accomadation__c.object-meta.xml
<CustomObject>
    <label>Accomadation</label>
    <nameField>
        <label>Accomadation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accomadations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>