force-app/main/default/objects/Accomadation__c/fields/ChangeURL__c.field-meta.xml
<CustomField>
    <fullName>ChangeURL__c</fullName>
    <label>ChangeURL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airbnb</fullName>
            </value>
            <value>
                <fullName>Qantas Hotels</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>