force-app/main/default/objects/Accomadation__c/fields/City_ID__c.field-meta.xml
<CustomField>
    <fullName>City_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City ID</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Accomadations</relationshipLabel>
    <relationshipName>Accomadations</relationshipName>
    <type>Lookup</type>
</CustomField>