force-app/main/default/objects/Accomadation__c/fields/Cost_per_night__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_night__c</fullName>
    <label>Cost per night</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>