force-app/main/default/objects/Accomadation__c/fields/Sleeping_Pod_Cost_per_hour__c.field-meta.xml
<CustomField>
    <fullName>Sleeping_Pod_Cost_per_hour__c</fullName>
    <label>Sleeping pod cost per hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>