force-app/main/default/objects/Accomadation__c/recordTypes/Accomadation_mode.recordType-meta.xml
<RecordType>
    <fullName>Accomadation_mode</fullName>
    <active>true</active>
    <label>Accomadation mode</label>
</RecordType>