force-app/main/default/objects/Accomadation__c/recordTypes/Sleeping_pod_mode.recordType-meta.xml
<RecordType>
    <fullName>Sleeping_pod_mode</fullName>
    <active>true</active>
    <label>Sleeping pod mode</label>
</RecordType>