force-app/main/default/objects/Accomadation__c/validationRules/Qantas_Hotel_Needs_An_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>Qantas_Hotel_Needs_An_ID</fullName>
    <active>true</active>
    <errorConditionFormula>AND( TEXT(ChangeURL__c) == &apos;Qantas Hotels&apos; , OR(ISBLANK(Hotel_ID__c),ISNULL(Hotel_ID__c)))</errorConditionFormula>
    <errorDisplayField>Hotel_ID__c</errorDisplayField>
    <errorMessage>Hotel ID is required for a Qantas Hotel</errorMessage>
</ValidationRule>