force-app/main/default/objects/Accomadation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cost_per_night__c</columns>
    <columns>URL__c</columns>
    <columns>City_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Accomadation__c.Accomadation_mode</value>
    </filters>
    <label>All</label>
</ListView>